# gud-pico

./: CMakeLists.txt  README.md  camera2fb.py  japanese.md
examples/: CMakeLists.txt
examples/ili9341/: ili9341.c
examples/ili9488/.ipynb_checkpoints/: ili9488-checkpoint.c
examples/mi0283qt/: mi0283qt.c
examples/pico-display/: pico-display.c
examples/st7796/: CMakeLists.txt
examples/st7796/.ipynb_checkpoints/: st7796-checkpoint.c
libraries/mipi_dbi/: mipi_dbi.c  mipi_dbi.h
panel/: CMakeLists.txt
panel/ili9341/: ili9341.c
panel/ili9341/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  ili9341-checkpoint.c
panel/ili9488/: ili9488.c  readme.md
panel/ili9488/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  ili9488-checkpoint.c
panel/st7796/: st7796.c
panel/st7796/.ipynb_checkpoints/: st7796-checkpoint.c
panel/st7796m/: st7796m.c
panel/st7796m/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  st7796m-checkpoint.c
